--- a/src/components/event_selector/event_selector.css
+++ b/src/components/event_selector/event_selector.css
@@ -67,6 +67,7 @@
       list-style: none;
       padding: 0;
       margin: 0;
+      flex-direction: column;
     }
     li {
       padding: 10pr 0;
