--- a/src/components/day_hover/day_hover.css
+++ b/src/components/day_hover/day_hover.css
@@ -8,9 +8,15 @@
   padding: 10px;
   color: $textBlue;
   z-index: 1000;
-  pointer-events: none;
+  /*pointer-events: none;*/
+
   .popup__title {
     margin-bottom: 15px;
+
+    a {
+      color: $textBlue;
+
+    }
   }
 
   &__event {
