--- a/src/components/text_field/text_field.css
+++ b/src/components/text_field/text_field.css
@@ -1,13 +1,18 @@
-.text_field {
+.form_field {
   margin-bottom: 20pr;
-  label {
-    margin-bottom: 2pr;
-    display: block;
-    color: #80A6CC;
-    font-size: 9px;
-    line-height: 11px;
-    text-transform: uppercase;
-  }
+
+}
+
+.form_label {
+  margin-bottom: 2pr;
+  display: block;
+  color: #80A6CC;
+  font-size: 9px;
+  line-height: 11px;
+  text-transform: uppercase;
+}
+
+.text_field {
 
   input {
     border: 1px solid #DAE3ED;
