--- a/src/index.css
+++ b/src/index.css
@@ -107,60 +107,21 @@ input {
   }
 }
 
-.filter--view {
-  margin-bottom: 18pr;
-}
-
-.filters {
-  margin-bottom: 28pr;
-
-  label {
-    margin-right: 20pr;
-    color: #80A6CC;
-    font-size: 9pr;
-    line-height: 11pr;
-    text-transform: uppercase;
-  }
-}
-.link--filter {
-  position: relative;
-  color: #80A6CC;
-  font-size: 14pr;
-  line-height: 24pr;
-  background: transparent;
-  border: none;
-  margin-right: 10pr;
-
-  &:after {
-    content: '';
-    display: block;
-    width: 2px;
-    height: 2px;
-    border-radius: 50%;
-    background: #80A6CC;
-    position: absolute;
-    right: -6pr;
-    top: 50%;
-  }
-
-  &:last-child:after {
-    display: none;
-  }
-}
-
-.button--filter {
-  height: 30pr;
-  border-radius: 20pr;
-  border: 1px solid #DAE3ED;
-  padding: 0 15pr;
-  font-size: 14pr;
-  line-height: 16pr;
-  margin-right: 10pr;
-
-  &.-active {
-    background: #F2F2F2;
-  }
-}
 .field-error {
   color: red;
+}
+
+/******* Tables ******/
+.table thead th {
+  color: $poloBlue;
+  font-size: 9px;
+  font-weight: normal;
+  line-height: 11px;
+  text-transform: uppercase;
+  border-top: 0;
+  border-bottom: 1px solid $botticelli;
+}
+
+table td {
+  color: $textBlue;
 }
